<resources>
    <string name="rent_format">Rent: %s</string>
    <string name="bhk_description">%s BHK</string>
    <string name="default_web_client_id" translatable="false">267557886464-iiunpsvao8ugtqf6e5lrh6cpodif91cl.apps.googleusercontent.com</string>
    <string name="app_name">GharKhojo</string>
    <string name="home">Home</string>
    <string name="search">search</string>
    <string name="Cart">Bookmark</string>
    <string name="account">Don\'t you have a account yet?<font color="@color/black"><b><u><i>Sign Up</i></u></b></font></string>
    <string name="forgot_password"><u>I forgot my password</u></string>
    <string name="Profile">Profile</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>

    <string name="housing_type_icon_description">Housing type icon</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="exit">Exit</string>
    <string name="todo">TODO</string>
    <string name="_2_bhk">2 BHK</string>
    <string name="rent_10000">Rent: 10000</string>
    <string name="are_you_sure_you_want_to_exit_the_app">Are you sure you want to exit the app?</string>
    <string name="find_your_dream_home">Find your dream home</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="please_log_in">Please, Log In.</string>
    <string name="email">Email</string>
    <string name="or">Or</string>
    <string name="continue_with">Continue With</string>
    <string name="google">Google</string>
    <string name="password">Password</string>
    <string name="facebook">Facebook</string>
    <string name="login">Login</string>
    <string name="sign_out">Sign Out</string>
    <string name="user_id">User ID</string>
    <string name="profile">Profile</string>
    <string name="username">Username</string>
    <string name="abc_gmail_com">abc@gmail.com</string>
    <string name="_11111111">No phone number provided</string>
    <string name="flat_home_country">No address provided</string>
    <string name="default_username">UserName</string>
    <string name="default_email">Email not available</string>
    <string name="default_address">Address not available</string>
    <string name="default_phone">Phone not available</string>
    <string name="sign_out_success">Sign Out is successful ✅💕👍</string>
    <string name="sign_out_failed">Sign Out failed. Please try again.</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="name">Name:</string>
    <string name="enter_your_phone_number">Enter your phone number</string>
    <string name="save">Save</string>
    <string name="enter_your_address">Enter your address</string>
    <string name="address">Address:</string>
    <string name="property_images_desc">property_images_desc</string>
    <string name="_7_000_month_14_0_k_deposit">₹ 7,000 / Month (₹ 14.0 K Deposit)</string>
    <string name="view_charges">view charges</string>
    <string name="pricing_got_you_puzzled">pricing got you puzzled ?</string>
    <string name="negotiate_rent">negotiate rent ></string>
    <string name="contact_owner">Contact Owner</string>
    <string name="new_flat_spacious_room_cooperative_society">New flat, spacious room, cooperative society</string>
    <string name="grid_item_clicked">Clicked on GridItem: %1$s</string>

    <string name="email_verification_quote">Verification email has been sent to your email address. Please verify your email address to continue.</string>
    <string name="filter">Filter</string>
    <string name="property_type_selection">Property Type selection</string>
    <string name="next">Next</string>
    <string name="preferred_tenants">Preferred Tenants</string>
    <string name="preferred_tenants_selection">Preferred Tenants selection</string>
    <string name="next_button">Next button</string>
    <string name="tenant_served_input_field">Tenant served input field</string>
    <string name="enter_tenant_served">Enter tenant served</string>
    <string name="owner_details">Owner Details</string>
    <string name="owner_name">Owner Name</string>
    <string name="enter_owner_name">Enter owner name</string>
    <string name="owner_name_input_field">Owner Name input field</string>
    <string name="property_type">Property Type</string>
    <string name="tenant_served">Tenant served</string>
    <string name="phone_number_input_field">Phone Number input field</string>
    <string name="enter_phone_number">Enter phone number</string>
    <string name="chat">Chat</string>
    <string name="road_lain_no"><![CDATA[Road&Lane No:]]></string>
    <string name="sure_delete">Are you sure you want to delete this post?</string>

    <string-array name="furnishing_options">
        <item>Semi Furnished</item>
        <item>Fully Furnished</item>
        <item>No Furnishing</item>
    </string-array>
</resources>