<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >
    <item android:id="@+id/nav_home"
        android:icon="@drawable/icon_home"
        android:title="@string/home"
        app:cnb_iconColor="@color/expBlue"
        />


    <item android:id="@+id/nav_chat"
        android:icon="@drawable/ic_chat"
        android:title="@string/chat"
        app:cnb_iconColor="@color/expBlue"/>

    <item android:id="@+id/nav_bookMark"
        android:icon="@drawable/ic_bookmark_filled"
        android:title="@string/Cart"
        app:cnb_iconColor="@color/expBlue"/>

    <item android:id="@+id/nav_profile"
        android:icon="@drawable/account_heart"
        android:title="@string/Profile"
        app:cnb_iconColor="@color/expBlue"/>
</menu>