<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:elevation="4dp"
    android:background="@drawable/dialogbg"
    tools:context=".Fragments.ProfileBottomSheet">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_round_remove_24"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/cancelButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_baseline_clear_24"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp" />

        <TextView
            android:id="@+id/editProfileText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_regular"
            android:padding="8dp"
            android:text="@string/edit_profile"
            android:textColor="@color/start_color"
            android:textSize="25sp"
            app:layout_constraintTop_toBottomOf="@id/imageView1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="16dp" />

        <!-- Name Field -->
        <TextView
            android:id="@+id/textViewName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_regular"
            android:text="@string/name"
            android:textColor="@color/your_status_bar_color"
            android:textSize="16sp"
            app:layout_constraintTop_toBottomOf="@id/editProfileText"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="16dp" />

        <EditText
            android:id="@+id/editTextName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:background="@drawable/bg_edittext_boarder"
            android:fontFamily="@font/montserrat_regular"
            android:hint="@string/enter_your_name"
            android:padding="12dp"
            android:autofillHints="name"
            android:textColor="#333333"
            android:textColorHint="@color/DarkGray"
            app:layout_constraintTop_toBottomOf="@id/textViewName"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="8dp" />

        <!-- Address Field -->
        <TextView
            android:id="@+id/textViewAddress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_regular"
            android:text="@string/address"
            android:textColor="@color/your_status_bar_color"
            android:textSize="16sp"
            app:layout_constraintTop_toBottomOf="@id/editTextName"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="16dp" />

        <EditText
            android:id="@+id/editTextAddress"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_edittext_boarder"
            android:fontFamily="@font/montserrat_regular"
            android:hint="@string/enter_your_address"
            android:padding="12dp"
            android:minHeight="48dp"
            android:autofillHints="address"
            android:textColor="@color/DarkGray"
            android:textColorHint="@color/DarkGray"
            app:layout_constraintTop_toBottomOf="@id/textViewAddress"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="8dp" />

        <!-- Phone Field -->
        <TextView
            android:id="@+id/textViewPhone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_regular"
            android:text="Phone:"
            android:textColor="@color/your_status_bar_color"
            android:textSize="16sp"
            app:layout_constraintTop_toBottomOf="@id/editTextAddress"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="16dp" />

        <EditText
            android:id="@+id/editTextPhone"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="phone"
            android:autofillHints="phone"
            android:background="@drawable/bg_edittext_boarder"
            android:fontFamily="@font/montserrat_regular"
            android:hint="@string/enter_your_phone_number"
            android:padding="12dp"
            android:minHeight="48dp"
            android:textColor="#333333"
            android:textColorHint="@color/DarkGray"
            app:layout_constraintTop_toBottomOf="@id/textViewPhone"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="8dp" />

        <!-- Save Button -->
        <Button
            android:id="@+id/buttonSave"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/gradiant_btn_login"
            android:fontFamily="@font/montserrat_bold"
            android:padding="12dp"
            android:text="@string/save"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/editTextPhone" />

        <!-- Progress Indicator -->
        <com.google.android.material.progressindicator.CircularProgressIndicator
            android:id="@+id/progress_circularLogin"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:indeterminate="true"
            android:visibility="gone"
            app:indicatorColor="#2196f3"
            app:trackCornerRadius="10dp"
            app:trackThickness="7dp"
            app:layout_constraintTop_toTopOf="@+id/buttonSave"
            app:layout_constraintBottom_toBottomOf="@+id/buttonSave"
            app:layout_constraintStart_toStartOf="@+id/buttonSave"
            app:layout_constraintEnd_toEndOf="@+id/buttonSave" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>
