<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_background"
    tools:context=".Fragments.OwnerFragments.AddFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">

        <TextView
            android:id="@+id/ownerDetailsTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Owner Details"
            android:textColor="#FFEB3B"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/ProfilePic"
            android:layout_width="125dp"
            android:layout_height="125dp"
            android:layout_marginTop="20dp"
            android:elevation="10dp"
            android:src="@drawable/yourname"
            app:civ_border_color="@color/white"
            app:civ_border_width="3dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ownerDetailsTitle" />

        <TextView
            android:id="@+id/ownerNameLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="2dp"
            android:fontFamily="@font/montserrat_regular"
            android:labelFor="@id/ownerNameEditText"
            android:text="Owner Name"
            android:textColor="@color/text_color_primary"
            app:layout_constraintBottom_toTopOf="@+id/ownerNameEditText"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ProfilePic" />

        <EditText
            android:id="@+id/ownerNameEditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/dark_edit_text_background"
            android:textColor="@color/text_color_primary"
            android:textColorHint="#E0E0E0"
            android:padding="12dp"
            android:hint="Enter owner name"
            android:importantForAccessibility="yes"
            android:contentDescription="Owner Name input field"
            app:layout_constraintTop_toBottomOf="@id/ownerNameLabel"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginBottom="16dp"/>

        <TextView
            android:id="@+id/propertyTypeLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="2dp"
            android:fontFamily="@font/montserrat_regular"
            android:labelFor="@id/propertyTypeSpinner"
            android:text="Property Type"
            android:textColor="@color/text_color_primary"
            app:layout_constraintBottom_toTopOf="@+id/propertyTypeSpinner"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ownerNameEditText" />

        <Spinner
            android:id="@+id/propertyTypeSpinner"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/dark_spinner_background"
            android:contentDescription="@string/property_type_selection"
            app:layout_constraintTop_toBottomOf="@id/propertyTypeLabel"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginBottom="8dp"/>

        <TextView
            android:id="@+id/preferredTenantsLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="2dp"
            android:fontFamily="@font/montserrat_regular"
            android:labelFor="@id/preferredTenantsSpinner"
            android:text="@string/preferred_tenants"
            android:textColor="@color/text_color_primary"
            app:layout_constraintBottom_toTopOf="@+id/preferredTenantsSpinner"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/propertyTypeSpinner" />

        <Spinner
            android:id="@+id/preferredTenantsSpinner"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/dark_spinner_background"
            android:contentDescription="@string/preferred_tenants_selection"
            app:layout_constraintTop_toBottomOf="@id/preferredTenantsLabel"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginBottom="8dp"/>

        <TextView
            android:id="@+id/emailLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="2dp"
            android:fontFamily="@font/montserrat_regular"
            android:labelFor="@id/emailEditText"
            android:text="Email"
            android:textColor="@color/text_color_primary"
            app:layout_constraintBottom_toTopOf="@+id/emailEditText"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/preferredTenantsSpinner" />

        <EditText
            android:id="@+id/emailEditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/dark_edit_text_background"
            android:textColor="@color/text_color_primary"
            android:textColorHint="#E0E0E0"
            android:inputType="textEmailAddress"
            android:padding="12dp"
            android:hint="Enter email address"
            android:importantForAccessibility="yes"
            android:contentDescription="Email input field"
            app:layout_constraintTop_toBottomOf="@id/emailLabel"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginBottom="16dp"/>

        <TextView
            android:id="@+id/tenantServedLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="2dp"
            android:fontFamily="@font/montserrat_regular"
            android:labelFor="@id/tenantServedEditText"
            android:text="Tenant served"
            android:textColor="@color/text_color_primary"
            app:layout_constraintBottom_toTopOf="@+id/tenantServedEditText"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/emailEditText" />

        <EditText
            android:id="@+id/tenantServedEditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/dark_edit_text_background"
            android:textColor="@color/text_color_primary"
            android:textColorHint="#E0E0E0"
            android:padding="12dp"
            android:inputType="number"
            android:hint="Enter tenant served"
            android:importantForAccessibility="yes"
            android:contentDescription="Tenant served input field"
            app:layout_constraintTop_toBottomOf="@id/tenantServedLabel"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginBottom="16dp"/>

        <TextView
            android:id="@+id/phoneNumberLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="2dp"
            android:fontFamily="@font/montserrat_regular"
            android:labelFor="@id/phoneNumberEditText"
            android:text="Phone Number"
            android:textColor="@color/text_color_primary"
            app:layout_constraintBottom_toTopOf="@+id/phoneNumberEditText"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tenantServedEditText" />

        <EditText
            android:id="@+id/phoneNumberEditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/dark_edit_text_background"
            android:textColor="@color/text_color_primary"
            android:textColorHint="#E0E0E0"
            android:inputType="phone"
            android:padding="12dp"
            android:hint="Enter phone number"
            android:importantForAccessibility="yes"
            android:contentDescription="Phone Number input field"
            app:layout_constraintTop_toBottomOf="@id/phoneNumberLabel"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginBottom="16dp"/>

        <Button
            android:id="@+id/nextButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:background="@drawable/purple_button_background"
            android:backgroundTint="#FFEB3B"
            android:contentDescription="@string/next_button"
            android:elevation="10dp"
            android:fontFamily="@font/montserrat_bold"
            android:text="Next"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:visibility="visible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/phoneNumberEditText" />

        <ProgressBar
            android:id="@+id/saveProgress"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:visibility="gone"
            android:layout_gravity="center"
            android:layout_marginBottom="16dp"
            app:layout_constraintTop_toBottomOf="@id/phoneNumberEditText"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:indeterminateTint="@color/YellowPrimary"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
